[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/bg/menu.png" type="Texture" id=1]
[ext_resource path="res://src/scenes/menu/menu.gd" type="Script" id=2]
[ext_resource path="res://src/scenes/menu/video.gd" type="Script" id=3]
[ext_resource path="res://src/scenes/menu/buttongroup.tres" type="ButtonGroup" id=4]
[ext_resource path="res://assets/icons/16_9.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/4_3.png" type="Texture" id=6]
[ext_resource path="res://src/scenes/menu/audio.gd" type="Script" id=7]
[ext_resource path="res://src/scenes/menu/achievements.gd" type="Script" id=8]
[ext_resource path="res://src/scenes/menu/panel.gd" type="Script" id=9]
[ext_resource path="res://assets/icons/loading.png" type="Texture" id=10]
[ext_resource path="res://src/scenes/menu/loadinginfo.gd" type="Script" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )

[sub_resource type="Animation" id=2]
resource_name = "rotate"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Icon:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
anchor_left = 0.0390625
anchor_top = 0.231667
anchor_right = 0.128906
anchor_bottom = 0.77
custom_constants/separation = 4
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Singleplayer" type="LinkButton" parent="ButtonsContainer"]
margin_top = 109.0
margin_right = 92.0
margin_bottom = 123.0
text = "Singleplayer"
underline = 1

[node name="Multiplayer" type="LinkButton" parent="ButtonsContainer"]
margin_top = 127.0
margin_right = 92.0
margin_bottom = 141.0
focus_mode = 2
disabled = true
text = "Multiplayer"
underline = 1

[node name="Achievements" type="LinkButton" parent="ButtonsContainer"]
margin_top = 145.0
margin_right = 92.0
margin_bottom = 159.0
focus_mode = 2
text = "Achievements"
underline = 1

[node name="Options" type="LinkButton" parent="ButtonsContainer"]
margin_top = 163.0
margin_right = 92.0
margin_bottom = 177.0
focus_mode = 2
text = "Options"
underline = 1

[node name="Credits" type="LinkButton" parent="ButtonsContainer"]
margin_top = 181.0
margin_right = 92.0
margin_bottom = 195.0
focus_mode = 2
text = "Credits"
underline = 1

[node name="Quit" type="LinkButton" parent="ButtonsContainer"]
margin_top = 199.0
margin_right = 92.0
margin_bottom = 213.0
focus_mode = 2
text = "Quit"
underline = 1

[node name="OptionsPanel" type="Panel" parent="."]
visible = false
anchor_left = 0.177734
anchor_top = 0.1775
anchor_right = 0.822266
anchor_bottom = 0.8225
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Video Settings" type="VBoxContainer" parent="OptionsPanel"]
anchor_top = 0.0749354
anchor_right = 0.5
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VideoSettings" type="Label" parent="OptionsPanel/Video Settings"]
margin_right = 330.0
margin_bottom = 14.0
text = "Video settings"
align = 1

[node name="Fullscreen" type="LinkButton" parent="OptionsPanel/Video Settings"]
margin_top = 18.0
margin_right = 330.0
margin_bottom = 32.0
focus_mode = 2
text = "Fullscreen: OFF"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Borderless" type="LinkButton" parent="OptionsPanel/Video Settings"]
margin_top = 36.0
margin_right = 330.0
margin_bottom = 50.0
hint_tooltip = "Can increase performance."
focus_mode = 2
text = "Borderless: OFF"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResolutionLabel" type="Label" parent="OptionsPanel/Video Settings"]
visible = false
margin_top = 54.0
margin_right = 330.0
margin_bottom = 68.0
hint_tooltip = "Display/Window Resolution"
mouse_filter = 1
text = "Resolution:"

[node name="ResolutionList" type="OptionButton" parent="OptionsPanel/Video Settings/ResolutionLabel"]
anchor_top = 1.28571
anchor_right = 0.881818
anchor_bottom = 2.71429
group = ExtResource( 4 )
text = "Native"
items = [ "Native", null, false, 0, null, "1920×1080", ExtResource( 5 ), false, 1, null, "1600×1280", ExtResource( 5 ), false, 2, null, "1600×1200", ExtResource( 5 ), false, 3, null, "1440×1080", ExtResource( 5 ), false, 4, null, "1440×900", ExtResource( 5 ), false, 5, null, "1280×960", ExtResource( 5 ), false, 6, null, "1366×768", ExtResource( 5 ), false, 7, null, "1280×800", ExtResource( 5 ), false, 8, null, "1280×720", ExtResource( 5 ), false, 9, null, "800×600", ExtResource( 6 ), false, 10, null, "640×480", ExtResource( 6 ), false, 11, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ApplyResolution" type="LinkButton" parent="OptionsPanel/Video Settings/ResolutionLabel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -36.0
margin_top = 7.0
margin_bottom = 21.0
focus_mode = 2
text = "Apply"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Separator" type="Label" parent="OptionsPanel/Video Settings"]
visible = false
margin_top = 54.0
margin_right = 330.0
margin_bottom = 68.0

[node name="_Separator" type="Label" parent="OptionsPanel/Video Settings"]
visible = false
margin_top = 54.0
margin_right = 330.0
margin_bottom = 68.0

[node name="Vsync" type="LinkButton" parent="OptionsPanel/Video Settings"]
margin_top = 54.0
margin_right = 330.0
margin_bottom = 68.0
hint_tooltip = "VSync is the graphics technology responsible for synchronizing the frame rate of a game to the refresh rate of a monitor.
This synchronization delivers smooth, uninterrupted gameplay for most of 3D games.
However, it can cause input lag and delay between inputs while the monitor is refreshing."
focus_mode = 2
text = "V-Sync: OFF"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quality" type="LinkButton" parent="OptionsPanel/Video Settings"]
margin_top = 72.0
margin_right = 330.0
margin_bottom = 86.0
hint_tooltip = "Global quality effects in game; LOW/MEDIUM/HIGH

Low : No effects or extra details shader for performance
High : Global effects, illumniation, etc.
Ultra : High but with much more (VERY INTENSIVE ON PERFORMANCES !)"
focus_mode = 2
text = "Quality: High"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio Settings" type="VBoxContainer" parent="OptionsPanel"]
anchor_left = 0.5
anchor_top = 0.0749354
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AudioSettings" type="Label" parent="OptionsPanel/Audio Settings"]
margin_right = 330.0
margin_bottom = 14.0
text = "Audio settings"
align = 1

[node name="MasterAudio" type="Label" parent="OptionsPanel/Audio Settings"]
margin_top = 18.0
margin_right = 330.0
margin_bottom = 32.0
text = "Master Volume (100%)"

[node name="MasterSlider" type="HSlider" parent="OptionsPanel/Audio Settings"]
margin_top = 36.0
margin_right = 330.0
margin_bottom = 52.0
value = 100.0

[node name="MusicAudio" type="Label" parent="OptionsPanel/Audio Settings"]
margin_top = 56.0
margin_right = 330.0
margin_bottom = 70.0
text = "Music Volume (100%)"

[node name="MusicSlider" type="HSlider" parent="OptionsPanel/Audio Settings"]
margin_top = 74.0
margin_right = 330.0
margin_bottom = 90.0
value = 100.0

[node name="SoundAudio" type="Label" parent="OptionsPanel/Audio Settings"]
margin_top = 94.0
margin_right = 330.0
margin_bottom = 108.0
text = "Sound Volume (100%)"

[node name="SoundSlider" type="HSlider" parent="OptionsPanel/Audio Settings"]
margin_top = 112.0
margin_right = 330.0
margin_bottom = 128.0
value = 100.0

[node name="Exit" type="LinkButton" parent="OptionsPanel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -23.0
margin_top = -14.0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Achievements" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -330.0
margin_top = -193.0
margin_right = 348.0
margin_bottom = 194.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Achievements"]
anchor_right = 1.00147
anchor_bottom = 1.0
rect_clip_content = true
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 10
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LoadingLabel" type="Label" parent="Achievements"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.5
margin_top = -7.0
margin_right = 77.5
margin_bottom = 7.0
text = "Loading achievements..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsLabel" type="Label" parent="Achievements"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -23.0
margin_right = -0.000732422
text = "Achievements owned: 0/0"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="LinkButton" parent="Achievements"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -23.0
margin_top = -14.0
focus_mode = 2
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsPanel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -277.0
margin_top = -182.0
margin_right = 278.0
margin_bottom = 181.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="Panel" parent="CreditsPanel"]
anchor_right = 1.0
margin_bottom = 30.0
custom_styles/panel = SubResource( 1 )

[node name="Title" type="Label" parent="CreditsPanel/TopBar"]
margin_left = 10.7093
margin_right = 105.709
margin_bottom = 28.0
text = "Credits"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc" type="Label" parent="CreditsPanel"]
anchor_top = 0.0826446
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
text = "Tabrix (tabrixx9): Main developer, Map designer, Game designer
CedarTyan: Artist, Achievement designer, Beta tester
jneen: Music designer & compositor, Map designer, Beta tester, Game designer
Ferkeshu: Sound designer, Beta tester
ROA: Arist, Achievement designer, Game designer, Map designer, Beta tester

Made with love for the Mini Jam 85

Props:
Engine: Godot Engine
And the awesome Godot community.
icons8.net for some of the icons"
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Exit" type="LinkButton" parent="CreditsPanel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -23.0
margin_top = -14.0
focus_mode = 2
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingInfo" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
text = "Loading Multiplayer..."
align = 1
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="LoadingInfo"]
modulate = Color( 1, 1, 1, 0.584314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AP" type="AnimationPlayer" parent="LoadingInfo"]
anims/rotate = SubResource( 2 )

[connection signal="pressed" from="ButtonsContainer/Singleplayer" to="." method="_on_Singleplayer_pressed"]
[connection signal="pressed" from="ButtonsContainer/Multiplayer" to="." method="_on_Multiplayer_pressed"]
[connection signal="pressed" from="ButtonsContainer/Achievements" to="." method="_on_Achievements_pressed"]
[connection signal="pressed" from="ButtonsContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="ButtonsContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="ButtonsContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="OptionsPanel/Video Settings/Fullscreen" to="OptionsPanel" method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="OptionsPanel/Video Settings/Borderless" to="OptionsPanel" method="_on_Borderless_pressed"]
[connection signal="pressed" from="OptionsPanel/Video Settings/ResolutionLabel/ApplyResolution" to="OptionsPanel" method="_on_ApplyResolution_pressed"]
[connection signal="pressed" from="OptionsPanel/Video Settings/Vsync" to="OptionsPanel" method="_on_Vsync_pressed"]
[connection signal="button_up" from="OptionsPanel/Video Settings/Quality" to="OptionsPanel" method="_on_Quality_button_up"]
[connection signal="pressed" from="OptionsPanel/Exit" to="OptionsPanel" method="_on_Exit_pressed"]
[connection signal="pressed" from="Achievements/Exit" to="Achievements" method="_on_Exit_pressed"]
[connection signal="pressed" from="CreditsPanel/Exit" to="CreditsPanel" method="_on_Exit_pressed"]
